compiler/mesh-parser/tests/snapshots/parser_tests__pattern_constructor_qualified.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Shape.Circle(r) -> r\\n  _ -> 0\\nend\")"
---
SOURCE_FILE@0..45
  CASE_EXPR@0..45
    CASE_KW@0..4 "case"
    WHITESPACE@4..5 " "
    NAME_REF@5..6
      IDENT@5..6 "x"
    WHITESPACE@6..7 " "
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    WHITESPACE@10..12 "  "
    MATCH_ARM@12..32
      CONSTRUCTOR_PAT@12..27
        IDENT@12..17 "Shape"
        DOT@17..18 "."
        IDENT@18..24 "Circle"
        L_PAREN@24..25 "("
        IDENT_PAT@25..26
          IDENT@25..26 "r"
        R_PAREN@26..27 ")"
      WHITESPACE@27..28 " "
      ARROW@28..30 "->"
      WHITESPACE@30..31 " "
      NAME_REF@31..32
        IDENT@31..32 "r"
    NEWLINE@32..33 "\n"
    WHITESPACE@33..35 "  "
    MATCH_ARM@35..41
      WILDCARD_PAT@35..36
        IDENT@35..36 "_"
      WHITESPACE@36..37 " "
      ARROW@37..39 "->"
      WHITESPACE@39..40 " "
      LITERAL@40..41
        INT_LITERAL@40..41 "0"
    NEWLINE@41..42 "\n"
    END_KW@42..45 "end"
  EOF@45..45 ""
