compiler/mesh-parser/tests/snapshots/parser_tests__pattern_constructor_qualified_no_args.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Shape.Point -> 1\\n  _ -> 0\\nend\")"
---
SOURCE_FILE@0..41
  CASE_EXPR@0..41
    CASE_KW@0..4 "case"
    WHITESPACE@4..5 " "
    NAME_REF@5..6
      IDENT@5..6 "x"
    WHITESPACE@6..7 " "
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    WHITESPACE@10..12 "  "
    MATCH_ARM@12..28
      CONSTRUCTOR_PAT@12..23
        IDENT@12..17 "Shape"
        DOT@17..18 "."
        IDENT@18..23 "Point"
      WHITESPACE@23..24 " "
      ARROW@24..26 "->"
      WHITESPACE@26..27 " "
      LITERAL@27..28
        INT_LITERAL@27..28 "1"
    NEWLINE@28..29 "\n"
    WHITESPACE@29..31 "  "
    MATCH_ARM@31..37
      WILDCARD_PAT@31..32
        IDENT@31..32 "_"
      WHITESPACE@32..33 " "
      ARROW@33..35 "->"
      WHITESPACE@35..36 " "
      LITERAL@36..37
        INT_LITERAL@36..37 "0"
    NEWLINE@37..38 "\n"
    END_KW@38..41 "end"
  EOF@41..41 ""
