compiler/mesh-parser/tests/snapshots/parser_tests__pattern_constructor_unqualified.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Some(v) -> v\\n  _ -> 0\\nend\")"
---
SOURCE_FILE@0..37
  CASE_EXPR@0..37
    CASE_KW@0..4 "case"
    WHITESPACE@4..5 " "
    NAME_REF@5..6
      IDENT@5..6 "x"
    WHITESPACE@6..7 " "
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    WHITESPACE@10..12 "  "
    MATCH_ARM@12..24
      CONSTRUCTOR_PAT@12..19
        IDENT@12..16 "Some"
        L_PAREN@16..17 "("
        IDENT_PAT@17..18
          IDENT@17..18 "v"
        R_PAREN@18..19 ")"
      WHITESPACE@19..20 " "
      ARROW@20..22 "->"
      WHITESPACE@22..23 " "
      NAME_REF@23..24
        IDENT@23..24 "v"
    NEWLINE@24..25 "\n"
    WHITESPACE@25..27 "  "
    MATCH_ARM@27..33
      WILDCARD_PAT@27..28
        IDENT@27..28 "_"
      WHITESPACE@28..29 " "
      ARROW@29..31 "->"
      WHITESPACE@31..32 " "
      LITERAL@32..33
        INT_LITERAL@32..33 "0"
    NEWLINE@33..34 "\n"
    END_KW@34..37 "end"
  EOF@37..37 ""
