compiler/mesh-parser/tests/snapshots/parser_tests__pattern_or_triple.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  1 | 2 | 3 -> true\\n  _ -> false\\nend\")"
---
SOURCE_FILE@0..46
  CASE_EXPR@0..46
    CASE_KW@0..4 "case"
    WHITESPACE@4..5 " "
    NAME_REF@5..6
      IDENT@5..6 "x"
    WHITESPACE@6..7 " "
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    WHITESPACE@10..12 "  "
    MATCH_ARM@12..29
      OR_PAT@12..21
        LITERAL_PAT@12..13
          INT_LITERAL@12..13 "1"
        WHITESPACE@13..14 " "
        BAR@14..15 "|"
        WHITESPACE@15..16 " "
        LITERAL_PAT@16..17
          INT_LITERAL@16..17 "2"
        WHITESPACE@17..18 " "
        BAR@18..19 "|"
        WHITESPACE@19..20 " "
        LITERAL_PAT@20..21
          INT_LITERAL@20..21 "3"
      WHITESPACE@21..22 " "
      ARROW@22..24 "->"
      WHITESPACE@24..25 " "
      LITERAL@25..29
        TRUE_KW@25..29 "true"
    NEWLINE@29..30 "\n"
    WHITESPACE@30..32 "  "
    MATCH_ARM@32..42
      WILDCARD_PAT@32..33
        IDENT@32..33 "_"
      WHITESPACE@33..34 " "
      ARROW@34..36 "->"
      WHITESPACE@36..37 " "
      LITERAL@37..42
        FALSE_KW@37..42 "false"
    NEWLINE@42..43 "\n"
    END_KW@43..46 "end"
  EOF@46..46 ""
