compiler/mesh-parser/tests/snapshots/parser_tests__pattern_or_with_constructors.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"case x do\\n  Some(1) | Some(2) -> true\\n  _ -> false\\nend\")"
---
SOURCE_FILE@0..54
  CASE_EXPR@0..54
    CASE_KW@0..4 "case"
    WHITESPACE@4..5 " "
    NAME_REF@5..6
      IDENT@5..6 "x"
    WHITESPACE@6..7 " "
    DO_KW@7..9 "do"
    NEWLINE@9..10 "\n"
    WHITESPACE@10..12 "  "
    MATCH_ARM@12..37
      OR_PAT@12..29
        CONSTRUCTOR_PAT@12..19
          IDENT@12..16 "Some"
          L_PAREN@16..17 "("
          LITERAL_PAT@17..18
            INT_LITERAL@17..18 "1"
          R_PAREN@18..19 ")"
        WHITESPACE@19..20 " "
        BAR@20..21 "|"
        WHITESPACE@21..22 " "
        CONSTRUCTOR_PAT@22..29
          IDENT@22..26 "Some"
          L_PAREN@26..27 "("
          LITERAL_PAT@27..28
            INT_LITERAL@27..28 "2"
          R_PAREN@28..29 ")"
      WHITESPACE@29..30 " "
      ARROW@30..32 "->"
      WHITESPACE@32..33 " "
      LITERAL@33..37
        TRUE_KW@33..37 "true"
    NEWLINE@37..38 "\n"
    WHITESPACE@38..40 "  "
    MATCH_ARM@40..50
      WILDCARD_PAT@40..41
        IDENT@40..41 "_"
      WHITESPACE@41..42 " "
      ARROW@42..44 "->"
      WHITESPACE@44..45 " "
      LITERAL@45..50
        FALSE_KW@45..50 "false"
    NEWLINE@50..51 "\n"
    END_KW@51..54 "end"
  EOF@54..54 ""
