compiler/mesh-parser/tests/snapshots/parser_tests__pipe_chain.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"x |> foo() |> bar()\")"
---
SOURCE_FILE@0..19
  PIPE_EXPR@0..19
    PIPE_EXPR@0..10
      NAME_REF@0..1
        IDENT@0..1 "x"
      WHITESPACE@1..2 " "
      PIPE@2..4 "|>"
      WHITESPACE@4..5 " "
      CALL_EXPR@5..10
        NAME_REF@5..8
          IDENT@5..8 "foo"
        ARG_LIST@8..10
          L_PAREN@8..9 "("
          R_PAREN@9..10 ")"
    WHITESPACE@10..11 " "
    PIPE@11..13 "|>"
    WHITESPACE@13..14 " "
    CALL_EXPR@14..19
      NAME_REF@14..17
        IDENT@14..17 "bar"
      ARG_LIST@17..19
        L_PAREN@17..18 "("
        R_PAREN@18..19 ")"
  EOF@19..19 ""
