compiler/mesh-parser/tests/snapshots/parser_tests__pipe_multiline_chain_trailing.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"x |>\\n  foo() |>\\n  bar()\")"
---
SOURCE_FILE@0..23
  PIPE_EXPR@0..23
    PIPE_EXPR@0..12
      NAME_REF@0..1
        IDENT@0..1 "x"
      WHITESPACE@1..2 " "
      PIPE@2..4 "|>"
      NEWLINE@4..5 "\n"
      WHITESPACE@5..7 "  "
      CALL_EXPR@7..12
        NAME_REF@7..10
          IDENT@7..10 "foo"
        ARG_LIST@10..12
          L_PAREN@10..11 "("
          R_PAREN@11..12 ")"
    WHITESPACE@12..13 " "
    PIPE@13..15 "|>"
    NEWLINE@15..16 "\n"
    WHITESPACE@16..18 "  "
    CALL_EXPR@18..23
      NAME_REF@18..21
        IDENT@18..21 "bar"
      ARG_LIST@21..23
        L_PAREN@21..22 "("
        R_PAREN@22..23 ")"
  EOF@23..23 ""
