compiler/mesh-parser/tests/snapshots/parser_tests__pipe_multiline_trailing.snap
---
source: compiler/mesh-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"x |>\\n  foo()\")"
---
SOURCE_FILE@0..12
  PIPE_EXPR@0..12
    NAME_REF@0..1
      IDENT@0..1 "x"
    WHITESPACE@1..2 " "
    PIPE@2..4 "|>"
    NEWLINE@4..5 "\n"
    WHITESPACE@5..7 "  "
    CALL_EXPR@7..12
      NAME_REF@7..10
        IDENT@7..10 "foo"
      ARG_LIST@10..12
        L_PAREN@10..11 "("
        R_PAREN@11..12 ")"
  EOF@12..12 ""
